fixed gap inside weaponType and sim containers

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body * {
 
 #root {
     overflow: hidden;
-    /*background-image: url("./src/assets/dummy/dummybackground.jpg");*/
+    background-image: url("./src/assets/dummy/dummybackground.jpg");
     background-size: cover;
 }
 
