--- a/src/styles/equippedWeaponsInventory/WeaponTypeContainer.module.scss
+++ b/src/styles/equippedWeaponsInventory/WeaponTypeContainer.module.scss
@@ -7,8 +7,12 @@
   justify-content: flex-end;
 }
 
+.Shift {
+  width: 7%;
+}
+
 .MainContent {
-  width: 70.59%;
+  width: 70%;
   height: 100%;
   margin-right: 0;
   margin-left: auto;
@@ -26,7 +30,7 @@
   .WeaponSquareContainer {
     height: 32.156%;
     width: 100%;
-    background: linear-gradient(90deg, transparent, rgba(44, 60, 97, 1) 100%);
+    background: linear-gradient(90deg, transparent, rgba(44, 60, 97, 1));
     box-sizing: border-box;
     border-top: 2px solid;
     border-bottom: 2px solid;
@@ -54,19 +58,21 @@
 }
 
 .UIBordersContainer {
+  // all ok
   width: 23%;
+  height: 100%;
   box-sizing: border-box;
   position: relative;
 
   .UIBorders {
     height: 40.78%;
-    width: 100%;
+    width: 102%;
     position: absolute;
     top: 16.9%;
-    right: 0;
-    box-sizing: border-box;
+    left: -2%;
     clip-path: polygon(0 10.568%, 17.15% 0, 100% 0, 100% 100%, 17.15% 100%, 0 89.432%);
-    background: #3f76f3;
+    background: linear-gradient(180deg, #3f76f3 0%, #3f76f3 12%, transparent 13%),
+    linear-gradient(0deg, #3f76f3 0%, #3f76f3 12%, transparent 13%);
     overflow: hidden;
 
     .ClippedElement {
@@ -76,6 +82,7 @@
       clip-path: polygon(0 12.568%, 19.15% 0, 100% 0, 100% 100%, 19.15% 100%, 0 88.832%);
       box-sizing: border-box;
       position: absolute;
+      left: 0;
       top: 2.5%;
     }
   }
